# prod-ready-agents-project

./: .gitignore  README.md  conftest.py  pyproject.toml  setup_dev.py  vimgolf_solver.py
debug/: debug_empty_backticks.py  debug_eval_issue.py  debug_extraction.py  debug_vim_issue.py
docs/: raw_editor_guide.md  testing_guide.md
examples/: README.md  comprehensive_example.py  interactive_vim_agent.py  llm_integration_example.py  raw_editor_demo.py  realistic_workflows.py  vim_agent_demo.py
src/pynvim_agents/: __init__.py  buffer_utils.py  raw_editor.py  vim_agent.py
tests/: script_concurrent_nvim.py  script_extraction_issues.py  script_limited_script.py  script_logging.py  script_simple_problem.py  script_single_problem.py  test_buffer_operations.py  test_concurrent_nvim.py  test_corrected_vim.py  test_extraction_issues.py  test_fixed_extraction.py  test_improved_extraction.py  test_keystroke_counting.py  test_limited_script.py  test_llm_output.py  test_logging.py  test_raw_editor.py  test_simple_problem.py  test_single_problem.py  test_vim_agent.py  test_vim_commands.py
